[package]
name = "WinDoubleJoy"
version = "0.1.0"
edition = "2024"

[features]
vigem = ["dep:vigem-client"]

[dependencies]
btleplug = "0.11.8"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
vigem-client = { version = "0.1.4", optional = true }
